--- a/HTML/css/portafolio.css
+++ b/HTML/css/portafolio.css
@@ -61,10 +61,53 @@ header nav ul li a:hover{
     color: var(--main-color);
 }
 section#main{
-    background-color: blue;
+    background-color: black;
     height: 100vh;
  }
  #main video{ 
      width: 100%;
      height: 100%;
  }
+ #main #overlay{ 
+     width: 100%;
+     height: 100%;
+     background-color: rgba(0, 0, 0, 0.8);
+     /*background-image: url(../img/patron.png);*/
+     position: absolute;
+     top: 0;
+     left: 0;
+     z-index: 3;
+     /*opacity: 0.2;*/
+ }
+ #main #overlay h2{
+     margin-top: 200px;
+     color: white;
+     text-align: center;
+     font-size: 6rem;
+  }
+  #main #overlay h3{
+      text-align: center;
+      color: white;
+  font-family: 'Open Sans', sans-serif;
+  font-size: 2rem;
+}
+.btn{ 
+    width:200px;
+    height:50px;
+    border:none;
+    border-radius:4px;
+    padding:8px;
+    font-size: 1rem;
+    font-weight: lighter;
+}
+.btnPrimary{ 
+    background-color:#148ac0;
+    color: white;
+    text-transform: uppercase;
+    padding-left: 10px;
+    padding-right: 10px;
+}
+a.btn{ 
+    text-decoration: none;
+    color: white;
+}
