--- a/HTML/css/portafolio.css
+++ b/HTML/css/portafolio.css
@@ -34,7 +34,7 @@ header ul{
 header nav{ 
     margin: 10px;
     margin-right: 10%;
-    width: 200px;
+    width: 500px;
     
 }
 header nav ul li{ 
@@ -63,10 +63,12 @@ header nav ul li a:hover{
 section#main{
     background-color: black;
     height: 100vh;
+    width: 100%;
+    overflow: hidden;
  }
  #main video{ 
-     width: 100%;
-     height: 100%;
+     min-width: 100%;
+     min-height: 100%;
  }
  #main #overlay{ 
      width: 100%;
@@ -111,3 +113,54 @@ a.btn{
     text-decoration: none;
     color: white;
 }
+#about, #contacto{ 
+    width: 80%;
+    height: 700px;
+    padding-left: 10%;
+    padding-right: 10%;
+}
+#about .col, #contacto .col{ 
+    float: left;
+    width: 50%;
+    text-align: justify;
+}
+#about > h2{ 
+    text-align: center;
+    font-size: 3rem;
+    padding-top: 30px;
+    font-family: 'Open Sans', sans-serif;
+}
+#about > .col > h2{ 
+    font-size: 2rem;
+    font-family: 'Open Sans', sans-serif;
+    font-weight: lighter;
+    padding-bottom: 50px;
+}
+#about .col img{ 
+    width: 70%;
+    display: block;
+    margin: 20px auto;
+}
+#about .col p{ 
+    margin-top: 50px;
+}
+#proyectos{ 
+    width: 80%;
+    height: 700px;
+    padding-left: 10%;
+    padding-right: 10%;
+}
+#proyectos > h2{ 
+    text-align: center;
+    font-size: 3rem;
+    padding-top: 30px;
+    font-family: 'Open Sans', sans-serif;
+}
+#contacto { 
+    text-align: center;
+    font-size: 2rem;
+    padding-top: 30px;
+    font-family: 'Open Sans', sans-serif;
+}
+
+
