--- a/HTML/css/portafolio.css
+++ b/HTML/css/portafolio.css
@@ -37,6 +37,9 @@ header nav{
     width: 500px;
     
 }
+header #menuMovil{ 
+    display: none;
+}
 header nav ul li{ 
     float: left;
     list-style: none;
@@ -113,15 +116,15 @@ a.btn{
     text-decoration: none;
     color: white;
 }
-#about, #contacto{ 
+#about, #contacto, #portafolio{ 
     width: 80%;
-    height: 700px;
+    min-height: 700px;
     padding-left: 10%;
     padding-right: 10%;
 }
 #about .col, #contacto .col{ 
     float: left;
-    width: 50%;
+    width: 100%;
     text-align: justify;
 }
 #about > h2{ 
